Added TODO info

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -20,7 +20,6 @@
     "# This script is used for interacting with OpenLCA.\n",
     "# Codes are adapted from Julian Rickert @GreenDelta by Ao Chen @ETH.\n",
     "# Connect to IPC server in OpenLCA software before running. (Port: 8080)\n",
-    "\n",
     "from notebook.services.config import ConfigManager\n",
     "cm = ConfigManager()\n",
     "cm.update('notebook', {'highlight_selected_word': {\n",
@@ -319,7 +318,7 @@
    "source": [
     "# Search specific process databases with key word(s)\n",
     "# Note that the search is blankspace-sensitive\n",
-    "search_process_df = processes_df[processes_df['name'].str.contains(r'heat production(?!$)')]\n",
+    "search_process_df = processes_df[processes_df['name'].str.contains(r'heat production(?!$)')] # TODO: change keywords\n",
     "search_process_df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "search_process_df"
@@ -851,7 +850,7 @@
    "source": [
     "# Search specific flow databases with key word(s)\n",
     "# Note that the search is blankspace-sensitive\n",
-    "search_flow_df = flows_df[flows_df['name'].str.contains(r'oil(?!$)')]\n",
+    "search_flow_df = flows_df[flows_df['name'].str.contains(r'oil(?!$)')] # TODO: change keywords\n",
     "search_flow_df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "search_flow_df"
