Corrected algorithm to generate correct results

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<olca.ipc.Client at 0x7f7e0941ad30>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This script is used for interacting with OpenLCA.\n",
     "# Codes are adapted from Julian Rickert @GreenDelta by Ao Chen @ETH.\n",
@@ -39,29 +50,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>heat production, heavy fuel oil, at industrial...</td>\n",
+       "      <td>4f582f90-d0ae-3552-be43-70c730e82af0</td>\n",
+       "      <td>RoW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>containerboard production, fluting medium, rec...</td>\n",
+       "      <td>fdffa34a-17fa-3676-9941-0a8a2bc5f5ac</td>\n",
+       "      <td>RoW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>market for wood chips, dry, measured as dry ma...</td>\n",
+       "      <td>35ca5293-f067-326c-ae45-920013c734c7</td>\n",
+       "      <td>RER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>treatment of waste glass, unsanitary landfill,...</td>\n",
+       "      <td>ab082ee7-7469-3a1f-8e8f-f71328b9e842</td>\n",
+       "      <td>GLO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>heat and power co-generation, natural gas, con...</td>\n",
+       "      <td>3c7c0ba3-acd4-3e19-be88-8fff9dc87788</td>\n",
+       "      <td>SE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19123</th>\n",
+       "      <td>steel production, electric, chromium steel 18/...</td>\n",
+       "      <td>39b4f8c5-a396-3e00-b8c1-db951800e388</td>\n",
+       "      <td>RoW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19124</th>\n",
+       "      <td>market for glued laminated timber, PUR-glue | ...</td>\n",
+       "      <td>c8a2e84f-6e92-3caa-ab1f-388427902eec</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19125</th>\n",
+       "      <td>electricity production, hard coal | electricit...</td>\n",
+       "      <td>ea622ed5-24a9-3c50-adbb-6f8eb7465bff</td>\n",
+       "      <td>US-HICC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19126</th>\n",
+       "      <td>land already in use, annual cropland to forest...</td>\n",
+       "      <td>8a8f8368-b831-3525-a257-065cacf08853</td>\n",
+       "      <td>BR-TO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19127</th>\n",
+       "      <td>market for electricity, high voltage | electri...</td>\n",
+       "      <td>5fe04573-75c0-3869-a4cb-cc35f71bdafc</td>\n",
+       "      <td>CR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19128 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    name  \\\n",
+       "0      heat production, heavy fuel oil, at industrial...   \n",
+       "1      containerboard production, fluting medium, rec...   \n",
+       "2      market for wood chips, dry, measured as dry ma...   \n",
+       "3      treatment of waste glass, unsanitary landfill,...   \n",
+       "4      heat and power co-generation, natural gas, con...   \n",
+       "...                                                  ...   \n",
+       "19123  steel production, electric, chromium steel 18/...   \n",
+       "19124  market for glued laminated timber, PUR-glue | ...   \n",
+       "19125  electricity production, hard coal | electricit...   \n",
+       "19126  land already in use, annual cropland to forest...   \n",
+       "19127  market for electricity, high voltage | electri...   \n",
+       "\n",
+       "                                         id location  \n",
+       "0      4f582f90-d0ae-3552-be43-70c730e82af0      RoW  \n",
+       "1      fdffa34a-17fa-3676-9941-0a8a2bc5f5ac      RoW  \n",
+       "2      35ca5293-f067-326c-ae45-920013c734c7      RER  \n",
+       "3      ab082ee7-7469-3a1f-8e8f-f71328b9e842      GLO  \n",
+       "4      3c7c0ba3-acd4-3e19-be88-8fff9dc87788       SE  \n",
+       "...                                     ...      ...  \n",
+       "19123  39b4f8c5-a396-3e00-b8c1-db951800e388      RoW  \n",
+       "19124  c8a2e84f-6e92-3caa-ab1f-388427902eec       CH  \n",
+       "19125  ea622ed5-24a9-3c50-adbb-6f8eb7465bff  US-HICC  \n",
+       "19126  8a8f8368-b831-3525-a257-065cacf08853    BR-TO  \n",
+       "19127  5fe04573-75c0-3869-a4cb-cc35f71bdafc       CR  \n",
+       "\n",
+       "[19128 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get all process dataset in database\n",
     "process_descriptor = client.get_descriptors(olca.Process)\n",
     "process_list = []\n",
     "id_list = []\n",
+    "location_list = []\n",
     "\n",
     "for process in process_descriptor:\n",
     "    process_list.append(process.name)\n",
     "    id_list.append(process.id)\n",
+    "    location_list.append(process.location)\n",
     "processes_df = pd.DataFrame(list(zip(process_list,\n",
-    "                                   id_list)),\n",
-    "                               columns=['name', 'id'])\n",
+    "                                   id_list, location_list)),\n",
+    "                               columns=['name', 'id', 'location'])\n",
     "processes_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>9e9e785d-fa84-34a0-8e2d-c43d37166a8e</td>\n",
+       "      <td>CA-SK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>8fd2d8ca-2eb5-361b-8e29-ec4aafcd081d</td>\n",
+       "      <td>NL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>becdeb83-db53-3fca-8818-1ed18cacdba6</td>\n",
+       "      <td>US-TRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>6d09283d-34c4-3939-85b7-849819c941d0</td>\n",
+       "      <td>CN-SD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>8ec2d93a-b7d4-35d1-9059-a29e4f93b720</td>\n",
+       "      <td>TH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>dc1c6a45-324e-3e60-8123-ef2aaf7e6001</td>\n",
+       "      <td>CN-SC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>1d3a4b99-50d6-3c30-9ece-7c10d2c3d938</td>\n",
+       "      <td>AU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>3380a306-abf9-32c1-817d-6ddf33ba49e7</td>\n",
+       "      <td>US-FRCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>fad3093c-f1df-313f-a0ae-4386d9c837b3</td>\n",
+       "      <td>SK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>aa649b48-e1ff-3dd4-905f-c4c06c9deac9</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  name  \\\n",
+       "0    electricity, high voltage, production mix | el...   \n",
+       "1    electricity, high voltage, production mix | el...   \n",
+       "2    electricity, high voltage, production mix | el...   \n",
+       "3    electricity, high voltage, production mix | el...   \n",
+       "4    electricity, high voltage, production mix | el...   \n",
+       "..                                                 ...   \n",
+       "109  electricity, high voltage, production mix | el...   \n",
+       "110  electricity, high voltage, production mix | el...   \n",
+       "111  electricity, high voltage, production mix | el...   \n",
+       "112  electricity, high voltage, production mix | el...   \n",
+       "113  electricity, high voltage, production mix | el...   \n",
+       "\n",
+       "                                       id location  \n",
+       "0    9e9e785d-fa84-34a0-8e2d-c43d37166a8e    CA-SK  \n",
+       "1    8fd2d8ca-2eb5-361b-8e29-ec4aafcd081d       NL  \n",
+       "2    becdeb83-db53-3fca-8818-1ed18cacdba6   US-TRE  \n",
+       "3    6d09283d-34c4-3939-85b7-849819c941d0    CN-SD  \n",
+       "4    8ec2d93a-b7d4-35d1-9059-a29e4f93b720       TH  \n",
+       "..                                    ...      ...  \n",
+       "109  dc1c6a45-324e-3e60-8123-ef2aaf7e6001    CN-SC  \n",
+       "110  1d3a4b99-50d6-3c30-9ece-7c10d2c3d938       AU  \n",
+       "111  3380a306-abf9-32c1-817d-6ddf33ba49e7  US-FRCC  \n",
+       "112  fad3093c-f1df-313f-a0ae-4386d9c837b3       SK  \n",
+       "113  aa649b48-e1ff-3dd4-905f-c4c06c9deac9       NO  \n",
+       "\n",
+       "[114 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Search specific process databases with key word(s)\n",
     "# Note that the search is blankspace-sensitive\n",
@@ -107,28 +386,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating product system of: electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | CA-SK\n",
+      "Remaining number of product systems to be created: 1\n",
+      "Creating product system of: electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | NL\n",
+      "Remaining number of product systems to be created: 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_system_name</th>\n",
+       "      <th>product_system_id</th>\n",
+       "      <th>product_system_location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>3b8f9ea4-3c76-44a0-9c5c-2e31cf4bb429</td>\n",
+       "      <td>CA-SK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>electricity, high voltage, production mix | el...</td>\n",
+       "      <td>1a21b9f1-ece7-4537-bb2f-3a391f556da0</td>\n",
+       "      <td>NL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 product_system_name  \\\n",
+       "0  electricity, high voltage, production mix | el...   \n",
+       "1  electricity, high voltage, production mix | el...   \n",
+       "\n",
+       "                      product_system_id product_system_location  \n",
+       "0  3b8f9ea4-3c76-44a0-9c5c-2e31cf4bb429                   CA-SK  \n",
+       "1  1a21b9f1-ece7-4537-bb2f-3a391f556da0                      NL  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create product systems for selected processes\n",
     "search_list_processID = list(search_process_df['id'])\n",
     "product_system_ids = []\n",
     "product_system_names = []\n",
+    "product_system_locations = pd.Series(search_process_df['location'])\n",
+    "\n",
     "for i in range(len(search_list_processID)):\n",
+    "# for i in range(2): # for test\n",
+    "    print('Creating product system of: '+search_process_df['name'][i]+' | '+product_system_locations[i])\n",
     "    product_system = client.create_product_system(search_list_processID[i], default_providers='prefer', preferred_type='UNIT_PROCESS')\n",
     "    product_system_ids.append(product_system.id)\n",
     "    ps = client.find(olca.ProductSystem, search_process_df['name'][i])\n",
     "    product_system_names.append(ps.name)\n",
+    "    print('Remaining number of product systems to be created: '+str(len(search_list_processID)-i-1))\n",
+    "    # print('Remaining number of product systems to be created: '+str(2-i-1)) # for test\n",
     "\n",
     "product_system_df = pd.DataFrame(list(zip(product_system_names, product_system_ids)), \n",
-    "                    columns=['product system name', 'product system id'])\n",
-    "product_system_df   "
+    "                    columns=['product_system_name', 'product_system_id'])\n",
+    "\n",
+    "product_system_df.assign(product_system_location=product_system_locations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,27 +499,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | CA-SK | 3b8f9ea4-3c76-44a0-9c5c-2e31cf4bb429\n",
+      "3b8f9ea4-3c76-44a0-9c5c-2e31cf4bb429\n",
+      "Remaining number of processes to be calculated: 1\n",
+      "Working on electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | NL | 1a21b9f1-ece7-4537-bb2f-3a391f556da0\n",
+      "1a21b9f1-ece7-4537-bb2f-3a391f556da0\n",
+      "Remaining number of processes to be calculated: 0\n"
+     ]
+    }
+   ],
    "source": [
     "for ps in range(len(product_system_names)):\n",
-    "    setup.product_system = client.find(olca.ProductSystem, product_system_names[ps])\n",
+    "# for ps in range(2): # for test\n",
+    "    \n",
+    "    print('Working on '+product_system_names[ps]+' | '+product_system_locations[ps]+' | '+product_system_ids[ps])\n",
+    "\n",
+    "    setup.product_system = client.get(olca.ProductSystem, uid=product_system_ids[ps])\n",
+    "\n",
+    "    print(setup.product_system.id)\n",
     "\n",
     "    calc_result = client.calculate(setup)\n",
     "\n",
-    "    client.excel_export(calc_result, 'calc_result.xlsx')\n",
+    "    client.excel_export(calc_result, 'calc_result/'+product_system_locations[ps]+'_'+'calc_result.xlsx')\n",
     "\n",
-    "    print('Remaining number of processes to be calculated: '+str(ps))"
+    "    print('Remaining number of processes to be calculated: '+str(len(product_system_names)-ps-1))"
    ]
   },
   {
