Completed OpenLCA workflow and generate required summary excel file, wrote a guide in Readme.

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -200,7 +200,7 @@
     "processes_df = pd.DataFrame(list(zip(process_list,\n",
     "                                   id_list, location_list)),\n",
     "                               columns=['name', 'id', 'location'])\n",
-    "processes_df"
+    "# processes_df"
    ]
   },
   {
@@ -347,7 +347,7 @@
     "search_process_df = processes_df[processes_df['name'].str.contains(r'high voltage, production mix(?!$)')] # TODO: change keywords\n",
     "search_process_df.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "search_process_df"
+    "# search_process_df"
    ]
   },
   {
@@ -467,7 +467,7 @@
     "for i in range(len(search_list_processID)):\n",
     "# for i in range(2): # for test\n",
     "    print('Creating product system of: '+search_process_df['name'][i]+' | '+product_system_locations[i])\n",
-    "    product_system = client.create_product_system(search_list_processID[i], default_providers='prefer', preferred_type='UNIT_PROCESS')\n",
+    "    product_system = client.create_product_system(search_list_processID[i], default_providers='prefer', preferred_type='UNIT_PROCESS') #TODO: preferred_type can be changed to \"SYSTEM_PROCESS\" if needed\n",
     "    product_system_ids.append(product_system.id)\n",
     "    ps = client.find(olca.ProductSystem, search_process_df['name'][i])\n",
     "    product_system_names.append(ps.name)\n",
@@ -487,8 +487,8 @@
    "outputs": [],
    "source": [
     "setup = olca.CalculationSetup()\n",
-    "setup.calculation_type = olca.CalculationType.CONTRIBUTION_ANALYSIS\n",
-    "setup.impact_method = client.find(olca.ImpactMethod, 'IPCC 2013')\n",
+    "setup.calculation_type = olca.CalculationType.CONTRIBUTION_ANALYSIS # TODO: Can choose SIMPLE_CALCULATION, CONTRIBUTION_ANALYSIS, UPSTREAM_ANALYSIS, REGIONALIZED_CALCULATION, MONTE_CARLO_SIMULATION\n",
+    "setup.impact_method = client.find(olca.ImpactMethod, 'IPCC 2013') # TODO: choose impact method accordingly\n",
     "\n",
     "# amount is the amount of the functional unit (fu) of the system that\n",
     "# should be used in the calculation; unit, flow property, etc. of the fu\n",
@@ -534,24 +534,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ocean/opt/miniconda3/envs/suscons/lib/python3.9/site-packages/openpyxl/styles/stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
+    "GWP100a_df = pd.DataFrame()\n",
+    "# for i in range(len(product_system_locations)):\n",
+    "for i in range(2): # for test\n",
+    "    filename_xlsx = 'calc_result/'+product_system_locations[i]+'_calc_result.xlsx'\n",
+    "    # filename_xlsx = 'calc_result/'+product_system_locations[0]+'_calc_result.xlsx' # for test\n",
+    "    results_db = pd.ExcelFile(filename_xlsx)\n",
+    "    impact_df = results_db.parse('Impacts')\n",
+    "    setup_df = results_db.parse('Calculation setup')\n",
     "\n",
-    "filename_xlsx = 'calc_result.xlsx'\n",
-    "result_db = pd.ExcelFile(filename_xlsx)\n",
-    "impact_contributions_df = result_db.parse('Process impact contributions')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "impact_contributions_df.iloc[2]"
+    "    new_header = impact_df.iloc[0] #grab the first row for the header\n",
+    "    impact_df = impact_df[1:] #take the data less the header row\n",
+    "    impact_df.columns = new_header #set the header row as the df header\n",
+    "\n",
+    "    GWP100a_series = pd.Series(impact_df.iloc[2, 2:])\n",
+    "    GWP100a_series['Process'] = search_process_df['name'][i]\n",
+    "    GWP100a_series['location_extended'] = setup_df.iloc[3, 2]\n",
+    "\n",
+    "    GWP100a_df[product_system_locations[i]] = GWP100a_series\n",
+    "\n",
+    "GWP100a_df.T.to_excel('GWP100a_summary.xlsx')\n"
    ]
   },
   {
